test/ddc-spec/error/01-ErrorExp/21-RecMissingAnnot/Main.dcs

-- Letrecs must have annotations when checking in Recon mode.
-- ISSUE #388 No source locations when compliance checker fails.
module Test with letrec

f x = x



